project downloaded and re-initialized

--- a/camping/public/assets/manifest.json
+++ b/camping/public/assets/manifest.json
@@ -1,4 +1,4 @@
 {
-  "assets/app.js": "http://localhost:53075/assets/app.js",
-  "assets/app.css": "http://localhost:53075/assets/app.css"
+  "assets/app.css": "http://localhost:53636/assets/app.css",
+  "assets/app.js": "http://localhost:53636/assets/app.js"
 }
