--- a/portfolio/ui/package.json
+++ b/portfolio/ui/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modern-drawer": "^1.2.2",
     "react-query": "^3.39.3",
     "react-tooltip": "^5.21.4"
   },
