--- a/portfolio/ui/package.json
+++ b/portfolio/ui/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modern-drawer": "^1.2.2",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.2",
     "react-tooltip": "^5.21.4"
   },
   "devDependencies": {
