--- a/portfolio/ui/package.json
+++ b/portfolio/ui/package.json
@@ -17,6 +17,7 @@
     "react-modern-drawer": "^1.2.2",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-tooltip": "^5.21.4"
   },
   "devDependencies": {
