--- a/camping/package.json
+++ b/camping/package.json
@@ -40,6 +40,7 @@
     "phc-argon2": "^1.1.4",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "slugify": "^1.6.6",
     "source-map-support": "^0.5.21",
     "swiper": "^10.2.0"
   }
