--- a/portfolio/ui/package.json
+++ b/portfolio/ui/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "5.0.0-beta.12",
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.0",
     "react": "^18.2.0",
