--- a/portfolio/backend/package.json
+++ b/portfolio/backend/package.json
@@ -21,9 +21,11 @@
     "youch-terminal": "^2.2.2"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.4.0",
     "@adonisjs/repl": "^3.1.0",
+    "adonis5-jwt": "^1.1.7",
     "luxon": "^3.4.3",
     "mysql2": "^3.6.1",
     "phc-bcrypt": "^1.0.8",
