--- a/portfolio/ui/package.json
+++ b/portfolio/ui/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-modern-drawer": "^1.2.2",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
