--- a/portfolio/backend/package.json
+++ b/portfolio/backend/package.json
@@ -24,10 +24,12 @@
     "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.4.0",
+    "@adonisjs/mail": "^8.2.1",
     "@adonisjs/repl": "^3.1.0",
     "adonis5-jwt": "^1.1.7",
     "luxon": "^3.4.3",
     "mysql2": "^3.6.1",
+    "nodemailer": "^6.9.7",
     "phc-bcrypt": "^1.0.8",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
